--- a/roles/mpv/files/mpv/mpv.conf
+++ b/roles/mpv/files/mpv/mpv.conf
@@ -9,9 +9,9 @@ sub-font-size=35
 
 input-conf=~/.config/mpv/input.conf
 
-#OSD
+# OSD
 
-#valume bar
+# valume bar
 osd-bar-align-y=0.2
 
 osd-align-x='center'
@@ -22,5 +22,5 @@ osd-font-size=35
 osd-border-size=1
 osd-color='#BFAB25'
 
-#FOR TEST
+# for debug
 #input-test=yes
