--- a/roles/mpv/files/mpv/input.conf
+++ b/roles/mpv/files/mpv/input.conf
@@ -5,11 +5,11 @@ ctrl+q quit
 4 ignore
 4 cycle audio down
 
-#MOUSE
+# mouse
 MOUSE_BTN3 add volume 2
 MOUSE_BTN4 add volume -2
 
-#ARROWS
+# arrows
 RIGHT osd-msg-bar seek 5
 LEFT osd-msg-bar seek -5
 UP osd-msg-bar seek 60
