copyq: fix appearance

--- a/roles/copyq/files/copyq/copyq.conf
+++ b/roles/copyq/files/copyq/copyq.conf
@@ -4,6 +4,7 @@ always_on_top=true
 confirm_exit=false
 hide_toolbar=true
 maxitems=1000
+show_advanced_command_settings=true
 show_tab_item_count=true
 
 [Plugins]
@@ -50,14 +51,14 @@ alt_item_css=
 bg=#4b4b4b
 css=
 cur_item_css="\n    ;border: 0.1em solid ${sel_bg}"
-edit_bg=#ffffff
-edit_fg=#1a1a1a
-edit_font="Ubuntu,13,-1,5,50,0,0,0,0,0"
+edit_bg=#4b4b4b
+edit_fg=#dfdfdf
+edit_font="Iosevka SS08,14,-1,5,50,0,0,0,0,0,Regular"
 fg=#dfdfdf
 find_bg=#00689c
 find_fg=#ffffff
-find_font="Ubuntu,13,-1,5,50,0,0,0,0,0"
-font="Ubuntu,13,-1,5,50,0,0,0,0,0"
+find_font="Iosevka SS08,13,-1,5,50,0,0,0,0,0,Regular"
+font="Iosevka SS08,13,-1,5,50,0,0,0,0,0,Regular"
 font_antialiasing=true
 item_css=
 item_spacing=
@@ -68,12 +69,12 @@ menu_css="\n    ;border-top: 0.08em solid ${bg + #333}\n    ;border-left: 0.08em
 notes_bg=#ffffff
 notes_css=
 notes_fg=#232323
-notes_font="Ubuntu,13,-1,5,50,0,0,0,0,0"
+notes_font="Iosevka SS08,13,-1,5,25,0,0,0,0,0,Light"
 notification_bg=#333
 notification_fg=#ddd
-notification_font="Ubuntu,12,-1,5,50,0,0,0,0,0"
+notification_font="Iosevka SS08,12,-1,5,25,1,0,0,0,0,Light"
 num_fg=#babdb6
-num_font="Ubuntu,9,-1,5,25,0,0,0,0,0"
+num_font="Iosevka SS08,9,-1,5,25,0,0,0,0,0,Light"
 search_bar="\n    ;background: ${edit_bg}\n    ;color: ${edit_fg}\n    ;border: 1px solid ${alt_bg}\n    ;margin: 2px"
 search_bar_focused="\n    ;border: 1px solid ${sel_bg}"
 sel_bg=#61819c
