--- a/roles/vscode/files/Code/User/settings.json
+++ b/roles/vscode/files/Code/User/settings.json
@@ -17,6 +17,7 @@
   "editor.lineHeight": 26,
   "editor.minimap.enabled": false,
   "editor.multiCursorModifier": "ctrlCmd",
+  "editor.occurrencesHighlight": false,
   "editor.renderLineHighlight": "gutter",
   "editor.renderWhitespace": "all",
   "editor.tabSize": 2,
@@ -33,6 +34,7 @@
   "markdown.preview.fontSize": 16,
   "python.formatting.provider": "yapf",
   "python.pythonPath": "/usr/bin/python3",
+  "search.location": "panel",
   "telemetry.enableCrashReporter": false,
   "telemetry.enableTelemetry": false,
   "terminal.integrated.drawBoldTextInBrightColors": false,
