--- a/roles/filesystem/tasks/main.yml
+++ b/roles/filesystem/tasks/main.yml
@@ -1,6 +1,6 @@
 ---
 - name: collect stat
-  include_tasks: '{{ helper_stat }}'
+  import_tasks: '{{ helper_path }}/stat.yml'
   vars:
     path: '{{ item }}'
     data: '{{ filesystem_device_list }}'
@@ -27,12 +27,12 @@
     group: '{{ ansible_user_id }}'
 
 - name: create directory
-  include_tasks: '{{ helper_dir_create }}'
+  include_tasks: '{{ helper_path }}/dir_create.yml'
   vars:
     path: '{{ user_storage }}/{{ item }}'
   loop: '{{ filesystem_directory_list }}'
 
 - name: clean the room
-  include_tasks: '{{ helper_dir_remove }}'
+  import_tasks: '{{ helper_path }}/dir_remove.yml'
   vars:
     path: '{{ user_storage }}/lost+found'
