--- a/playbook.yml
+++ b/playbook.yml
@@ -1,14 +1,11 @@
 ---
 - hosts: local
 
-  pre_tasks:
-    - name: create helpers vars
-      set_fact:
-        'helper_{{ item.path | splitext | first }}': '{{ item.src }}'
-      loop: '{{ q("filetree", helper_path) }}'
+  vars_files:
+    - vars.yml
 
   roles:
-   - filesystem
+    - filesystem
     - utility
     - optimization
     - font
