--- a/roles/mintupdate/tasks/main.yml
+++ b/roles/mintupdate/tasks/main.yml
@@ -1,5 +1,5 @@
 ---
 - name: add settings
-  include_tasks: '{{ helper_dconf }}'
+  import_tasks: '{{ helper_path }}/dconf.yml'
   vars:
     list: '{{ mintupdate_settings }}'
