--- a/roles/zsh/tasks/main.yml
+++ b/roles/zsh/tasks/main.yml
@@ -6,7 +6,7 @@
     shell: '{{ lookup("pipe", "which zsh") }}'
 
 - name: create .zshrc file
-  include_tasks: '{{ helper_template }}'
+  import_tasks: '{{ helper_path }}/template.yml'
   vars:
     src: '{{ dotfiles_roles }}/zsh/templates/.zshrc.j2'
     dest: '{{ user_home }}/.zshrc'
