--- a/service/utility/tasks/alias.yml
+++ b/service/utility/tasks/alias.yml
@@ -7,7 +7,7 @@
   register: find_result
 
 - name: alias | create temporary directory
-  include_tasks: '{{ helper_tempfile }}'
+  import_tasks: '{{ helper_path }}/tempfile.yml'
   vars:
     tempfile_suffix: '.alias'
 
