--- a/service/utility/tasks/link.yml
+++ b/service/utility/tasks/link.yml
@@ -3,13 +3,13 @@
     flat_utility_link: '{{ utility_link_list | flatten }}'
 
 - name: link | collect stat
-  include_tasks: '{{ helper_stat }}'
+  import_tasks: '{{ helper_path }}/stat.yml'
   vars:
     path: '{{ item.dest }}'
     data: '{{ flat_utility_link }}'
 
 - name: link | remove existing directory
-  include_tasks: '{{ helper_dir_remove }}'
+  include_tasks: '{{ helper_path }}/dir_remove.yml'
   vars:
     path: '{{ item.item.dest }}'
   loop: '{{ helper_stat_result.results }}'
