--- a/service/utility/tasks/mime.yml
+++ b/service/utility/tasks/mime.yml
@@ -1,6 +1,6 @@
 ---
 - name: mime | create list
-  include_tasks: '{{ helper_template }}'
+  import_tasks: '{{ helper_path }}/template.yml'
   vars:
     src: 'mimeapps.list.j2'
     dest: '{{ user_config }}/mimeapps.list'
