replace utility_mime task with helper task

--- a/roles/calibre/defaults/main.yml
+++ b/roles/calibre/defaults/main.yml
@@ -4,7 +4,7 @@ utility_copy:
     - src: '{{ dotfiles_roles }}/calibre/files/calibre'
       dest: '{{ user_config }}'
 
-utility_mime:
+mime_list:
   entry_name: 'calibre-ebook-viewer'
   type:
     - 'application/epub+zip'
