--- a/roles/vscode/defaults/main.yml
+++ b/roles/vscode/defaults/main.yml
@@ -18,7 +18,7 @@ utility_link:
   src: '{{ dotfiles_roles }}/vscode/files/Code'
   dest: '{{ user_config }}/Code'
 
-utility_mime:
+mime_list:
   entry_name: 'code'
   type:
     - 'application/xml'
