replace utility_startup task to helper startup task

--- a/playbook.yml
+++ b/playbook.yml
@@ -17,6 +17,10 @@
     - emacs
     - vscode
     - gnome_terminal
+    - albert
+    - copyq
+    - mega
+    - redshift
     - calibre
     - common
     - sublime
