--- a/roles/copyq/defaults/main.yml
+++ b/roles/copyq/defaults/main.yml
@@ -12,6 +12,6 @@ utility_copy:
     - src: '{{ dotfiles_roles }}/copyq/files/copyq'
       dest: '{{ user_config }}'
 
-utility_startup:
-  - name: 'copyq'
-    delay: 40
+startup_list:
+  name: 'copyq'
+  delay: 40
