--- a/roles/vscode/tasks/main.yml
+++ b/roles/vscode/tasks/main.yml
@@ -24,3 +24,6 @@
   import_tasks: '{{ helper_path }}/mime.yml'
   vars:
     data: '{{ mime_list }}'
+
+- name: add alias
+  import_tasks: '{{ helper_path }}/alias.yml'
