--- a/roles/nvm/tasks/main.yml
+++ b/roles/nvm/tasks/main.yml
@@ -7,3 +7,6 @@
     - 'nvm use --lts'
   args:
     removes: '{{ user_home }}/.nvm'
+
+- name: add alias
+  import_tasks: '{{ helper_path }}/alias.yml'
