replace utility alias task to helper alias task

--- a/roles/firefox/defaults/main.yml
+++ b/roles/firefox/defaults/main.yml
@@ -11,7 +11,7 @@ utility_copy:
     - src: '{{ dotfiles_roles }}/firefox/files/.mozilla'
       dest: '{{ user_home }}'
 
-utility_shortcut:
+shortcut_list:
   - name: "'firefox'"
     command: "'firefox'"
     binding: "['<Super>F1']"
