replace utility_package task to helper packages task

--- a/playbook.yml
+++ b/playbook.yml
@@ -26,6 +26,21 @@
     - sublime
     - easytag
     - firefox
+    - audacity
+    - bin
+    - chromium
+    - cmus
+    - doublecmd
+    - keepassxc
+    - libreoffice
+    - mpv
+    - simplescreenrecorder
+    - synaptic
+    - thunderbird
+    - tor_browser
+    - transmission
+    - virtualbox
+    - zsh_syntax_highlighting
     - rsnapshot
     - flameshot
     - wireguard
