--- a/roles/doublecmd/defaults/main.yml
+++ b/roles/doublecmd/defaults/main.yml
@@ -1,8 +1,7 @@
 ---
-utility_package:
-  apt:
-    install:
-      - 'doublecmd-gtk'
+package_apt_list:
+  install:
+    - 'doublecmd-gtk'
 
 utility_copy:
   paths:
