--- a/roles/emacs/defaults/main.yml
+++ b/roles/emacs/defaults/main.yml
@@ -2,10 +2,9 @@
 utility_repository:
   - repo: 'ppa:kelleyk/emacs'
 
-utility_package:
-  apt:
-    install:
-      - 'emacs25'
+package_apt_list:
+  install:
+    - 'emacs25'
 
 utility_link:
   src: '{{ dotfiles_roles }}/emacs/files/emacs.d'
