--- a/roles/firefox/defaults/main.yml
+++ b/roles/firefox/defaults/main.yml
@@ -1,10 +1,9 @@
 ---
-utility_package:
-  apt:
-    install:
-      - 'firefox'
-    remove:
-      - 'firefox-locale-en'
+package_apt_list:
+  install:
+    - 'firefox'
+  remove:
+    - 'firefox-locale-en'
 
 utility_copy:
   paths:
