--- a/roles/synaptic/defaults/main.yml
+++ b/roles/synaptic/defaults/main.yml
@@ -1,8 +1,7 @@
 ---
-utility_package:
-  apt:
-    install:
-      - 'synaptic'
+package_apt_list:
+  install:
+    - 'synaptic'
 
 utility_copy:
   privilege: true
