--- a/roles/tor_browser/defaults/main.yml
+++ b/roles/tor_browser/defaults/main.yml
@@ -1,6 +1,5 @@
 ---
-utility_package:
-  apt:
-    install_recommends: no
-    install:
-      - 'torbrowser-launcher'
+package_apt_list:
+  install_recommends: no
+  install:
+    - 'torbrowser-launcher'
