--- a/roles/virtualbox/defaults/main.yml
+++ b/roles/virtualbox/defaults/main.yml
@@ -4,10 +4,9 @@ utility_key: 'https://www.virtualbox.org/download/oracle_vbox_2016.asc'
 utility_repository:
   - repo: 'deb https://download.virtualbox.org/virtualbox/debian {{ ubuntu_codename }} contrib'
 
-utility_package:
-  apt:
-    install:
-      - 'virtualbox-5.2'
+package_apt_list:
+  install:
+    - 'virtualbox-5.2'
 
 utility_template:
   - path: '{{ dotfiles_roles }}/virtualbox/templates'
