--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -1,3 +1,6 @@
+- name: run package helper
+  import_tasks: '{{ helper_path }}/package_apt.yml'
+
 - name: add entries to mime list
   import_tasks: '{{ helper_path }}/mime.yml'
   vars:
