--- a/roles/flameshot/tasks/main.yml
+++ b/roles/flameshot/tasks/main.yml
@@ -6,3 +6,6 @@
 
 - name: add shortcut
   import_tasks: '{{ helper_path }}/shortcut.yml'
+
+- name: run package helper
+  import_tasks: '{{ helper_path }}/package_apt.yml'
