--- a/roles/font/tasks/main.yml
+++ b/roles/font/tasks/main.yml
@@ -1,4 +1,7 @@
 ---
+- name: run package helper
+  import_tasks: '{{ helper_path }}/package_apt.yml'
+
 - name: recreate directory
   block:
     - import_tasks: '{{ helper_path }}/dir_remove.yml'
