--- a/roles/git/defaults/main.yml
+++ b/roles/git/defaults/main.yml
@@ -2,10 +2,9 @@
 utility_repository:
   - repo: 'ppa:git-core/ppa'
 
-utility_package:
-  apt:
-    install:
-      - 'git'
+package_apt_list:
+  install:
+    - 'git'
 
 git_config_data:
   - name: user.email
