--- a/roles/keepassxc/defaults/main.yml
+++ b/roles/keepassxc/defaults/main.yml
@@ -2,10 +2,9 @@
 utility_repository:
   - repo: 'ppa:phoerious/keepassxc'
 
-utility_package:
-  apt:
-    install:
-      - 'keepassxc'
+package_apt_list:
+  install:
+    - 'keepassxc'
 
 utility_template:
   - path: '{{ dotfiles_roles }}/keepassxc/templates'
