--- a/roles/mpv/defaults/main.yml
+++ b/roles/mpv/defaults/main.yml
@@ -4,11 +4,10 @@
 utility_repository:
   - repo: 'ppa:mc3man/mpv-tests'
 
-utility_package:
-  apt:
-    install_recommends: no
-    install:
-      - 'mpv'
+package_apt_list:
+  install_recommends: no
+  install:
+    - 'mpv'
 
 utility_link:
   src: '{{ dotfiles_roles }}/mpv/files/mpv'
