--- a/roles/redshift/tasks/main.yml
+++ b/roles/redshift/tasks/main.yml
@@ -1,4 +1,7 @@
 ---
+- name: run package helper
+  import_tasks: '{{ helper_path }}/package_apt.yml'
+
 - name: run startup helper
   import_tasks: '{{ helper_path }}/startup.yml'
   vars:
