--- a/roles/rsnapshot/tasks/main.yml
+++ b/roles/rsnapshot/tasks/main.yml
@@ -1,3 +1,6 @@
 ---
 - name: add alias
   import_tasks: '{{ helper_path }}/alias.yml'
+
+- name: run package helper
+  import_tasks: '{{ helper_path }}/package_apt.yml'
