--- a/roles/sublime/defaults/main.yml
+++ b/roles/sublime/defaults/main.yml
@@ -4,10 +4,9 @@ utility_key: 'https://download.sublimetext.com/sublimehq-pub.gpg'
 utility_repository:
   - repo: 'deb https://download.sublimetext.com/ apt/stable/'
 
-utility_package:
-  apt:
-    install:
-      - 'sublime-text'
+package_apt_list:
+  install:
+    - 'sublime-text'
 
 utility_link:
   src: '{{ dotfiles_roles }}/sublime/files/sublime-text-3'
