--- a/roles/transmission/defaults/main.yml
+++ b/roles/transmission/defaults/main.yml
@@ -1,8 +1,7 @@
 ---
-utility_package:
-  apt:
-    install:
-      - 'transmission-gtk'
+package_apt_list:
+  install:
+    - 'transmission-gtk'
 
 utility_template:
   - path: '{{ dotfiles_roles }}/transmission/templates'
