--- a/roles/youtube_dl/tasks/main.yml
+++ b/roles/youtube_dl/tasks/main.yml
@@ -1,3 +1,6 @@
 ---
+- name: run package helper
+  import_tasks: '{{ helper_path }}/package_pip.yml'
+
 - name: add alias
   import_tasks: '{{ helper_path }}/alias.yml'
