--- a/roles/zsh/tasks/main.yml
+++ b/roles/zsh/tasks/main.yml
@@ -1,12 +1,15 @@
 ---
-- name: set zsh as the default shell
-  become: yes
-  user:
-    name: '{{ ansible_user_id }}'
-    shell: '{{ lookup("pipe", "which zsh") }}'
+- name: run package helper
+  import_tasks: '{{ helper_path }}/package_apt.yml'
 
 - name: create .zshrc file
   import_tasks: '{{ helper_path }}/template.yml'
   vars:
     src: '{{ dotfiles_roles }}/zsh/templates/.zshrc.j2'
     dest: '{{ user_home }}/.zshrc'
+
+- name: set zsh as the default shell
+  become: yes
+  user:
+    name: '{{ ansible_user_id }}'
+    shell: '{{ lookup("pipe", "which zsh") }}'
