delete utility_template & refactor template and startup helpers

--- a/roles/copyq/tasks/main.yml
+++ b/roles/copyq/tasks/main.yml
@@ -5,4 +5,6 @@
 - name: run startup helper
   import_tasks: '{{ helper_path }}/startup.yml'
   vars:
-    data: '{{ startup_list }}'
+    startup_list:
+      name: 'copyq'
+      delay: 40
