--- a/roles/albert/tasks/main.yml
+++ b/roles/albert/tasks/main.yml
@@ -2,7 +2,16 @@
 - name: run package helper
   import_tasks: '{{ helper_path }}/package_apt.yml'
 
+- name: run template helper
+  import_tasks: '{{ helper_path }}/template.yml'
+  vars:
+    template_list:
+      - src: 'albert.conf'
+        dest: '{{ user_config }}/albert'
+
 - name: run startup helper
   import_tasks: '{{ helper_path }}/startup.yml'
   vars:
-    data: '{{ startup_list }}'
+    startup_list:
+      name: 'albert'
+      delay: 0
