--- a/roles/git/tasks/main.yml
+++ b/roles/git/tasks/main.yml
@@ -1,4 +1,14 @@
 ---
+- name: run package helper
+  import_tasks: '{{ helper_path }}/package_apt.yml'
+
+- name: run template helper
+  import_tasks: '{{ helper_path }}/template.yml'
+  vars:
+    template_list:
+      - src: '.gitignore'
+        dest: '{{ dotfiles_directory }}'
+
 - name: git config
   block:
     - name: git config | with vault password
@@ -12,12 +22,3 @@
     - name: git config | without vault password
       debug:
         msg: 'Create your own git config yourself'
-
-- name: create .gitignore file
-  import_tasks: '{{ helper_path }}/template.yml'
-  vars:
-    src: '{{ dotfiles_roles }}/git/templates/.gitignore.j2'
-    dest: '{{ dotfiles_directory }}/.gitignore'
-
-- name: run package helper
-  import_tasks: '{{ helper_path }}/package_apt.yml'
