--- a/roles/gnome_terminal/tasks/main.yml
+++ b/roles/gnome_terminal/tasks/main.yml
@@ -24,9 +24,8 @@
       }}
 
 - name: create template
-  include_tasks: '{{ helper_path }}/template.yml'
-  vars:
-    src: '{{ dotfiles_roles }}/gnome_terminal/templates/terminal.sh.j2'
+  copy:
+    content: "{{ lookup('template', dotfiles_roles ~ '/gnome_terminal/templates/terminal.sh.j2') }}"
     dest: '{{ helper_tempfile_result.path }}/{{ item.0.name | replace(" ", "_") }}.sh'
   loop: '{{ zip_gnome_terminal }}'
 
