--- a/roles/zsh/tasks/main.yml
+++ b/roles/zsh/tasks/main.yml
@@ -2,11 +2,12 @@
 - name: run package helper
   import_tasks: '{{ helper_path }}/package_apt.yml'
 
-- name: create .zshrc file
+- name: run template helper
   import_tasks: '{{ helper_path }}/template.yml'
   vars:
-    src: '{{ dotfiles_roles }}/zsh/templates/.zshrc.j2'
-    dest: '{{ user_home }}/.zshrc'
+    template_list:
+      - src: '.zshrc'
+        dest: '{{ user_home }}'
 
 - name: set zsh as the default shell
   become: yes
