--- a/roles/bin/tasks/main.yml
+++ b/roles/bin/tasks/main.yml
@@ -1,5 +1,13 @@
+---
 - name: run package helper
   import_tasks: '{{ helper_path }}/package_apt.yml'
 
 - name: run package helper
   import_tasks: '{{ helper_path }}/package_pip.yml'
+
+- name: run link helper
+  import_tasks: '{{ helper_path }}/link.yml'
+  vars:
+    link_list:
+      - src: '{{ dotfiles_roles }}/bin/files/bin'
+        dest: '{{ user_home }}/bin'
