--- a/roles/emacs/tasks/main.yml
+++ b/roles/emacs/tasks/main.yml
@@ -1,5 +1,13 @@
+---
 - name: run package helper
   import_tasks: '{{ helper_path }}/package_apt.yml'
+
+- name: run link helper
+  import_tasks: '{{ helper_path }}/link.yml'
+  vars:
+    link_list:
+      - src: '{{ dotfiles_roles }}/emacs/files/emacs.d'
+        dest: '{{ user_home }}/.emacs.d'
 
 - name: configure
   block:
