--- a/roles/mpv/tasks/main.yml
+++ b/roles/mpv/tasks/main.yml
@@ -1,3 +1,12 @@
 ---
 - name: run package helper
   import_tasks: '{{ helper_path }}/package_apt.yml'
+
+- name: run template helper
+  import_tasks: '{{ helper_path }}/template.yml'
+  vars:
+    template_list:
+      - src: 'mpv.conf'
+        dest: '{{ user_config }}/mpv'
+      - src: 'input.conf'
+        dest: '{{ user_config }}/mpv'
