--- a/roles/vscode/tasks/main.yml
+++ b/roles/vscode/tasks/main.yml
@@ -5,6 +5,17 @@
 - name: run package helper
   import_tasks: '{{ helper_path }}/package_pip.yml'
 
+- name: run template helper
+  import_tasks: '{{ helper_path }}/template.yml'
+  vars:
+    template_list:
+      - src: 'javascript.json'
+        dest: '{{ user_config }}/Code/User/snippets'
+      - src: 'keybindings.json'
+        dest: '{{ user_config }}/Code/User'
+      - src: 'settings.json'
+        dest: '{{ user_config }}/Code/User'
+
 - name: add entries to mime list
   import_tasks: '{{ helper_path }}/mime.yml'
   vars:
