--- a/roles/nvm/tasks/main.yml
+++ b/roles/nvm/tasks/main.yml
@@ -1,4 +1,17 @@
 ---
+- name: run package helper
+  import_tasks: '{{ helper_path }}/package_apt.yml'
+
+- name: run git_repo helper
+  import_tasks: '{{ helper_path }}/git_repo.yml'
+  vars:
+    git_repo_list:
+      - repo: 'git://github.com/creationix/nvm.git'
+        dest: '{{ user_home }}/.nvm'
+
+- name: add alias
+  import_tasks: '{{ helper_path }}/alias.yml'
+
 - name: install lts version of node
   command: '{{ ansible_user_shell }} -c ". ~/.nvm/nvm.sh; {{ item }}"'
   loop:
@@ -7,9 +20,3 @@
     - 'nvm use --lts'
   args:
     removes: '{{ user_home }}/.nvm'
-
-- name: add alias
-  import_tasks: '{{ helper_path }}/alias.yml'
-
-- name: run package helper
-  import_tasks: '{{ helper_path }}/package_apt.yml'
