remove utility_copy and .j2 suffix & add copy helper & refactor template helper

--- a/playbook.yml
+++ b/playbook.yml
@@ -46,6 +46,8 @@
     - flameshot
     - wireguard
     - youtube_dl
+    - desktop_templates
+    - gpg
     - gnome
     - cinnamon
     - timezone
