--- a/roles/audacity/tasks/main.yml
+++ b/roles/audacity/tasks/main.yml
@@ -1,2 +1,9 @@
 - name: run package helper
   import_tasks: '{{ helper_path }}/package_apt.yml'
+
+- name: run copy helper
+  import_tasks: '{{ helper_path }}/copy.yml'
+  vars:
+    copy_list:
+      - src: 'audacity.cfg'
+        dest: '{{ user_home }}/.audacity-data'
