--- a/roles/copyq/tasks/main.yml
+++ b/roles/copyq/tasks/main.yml
@@ -2,6 +2,13 @@
 - name: run package helper
   import_tasks: '{{ helper_path }}/package_apt.yml'
 
+- name: run template helper
+  import_tasks: '{{ helper_path }}/template.yml'
+  vars:
+    template_list:
+      - src: 'copyq.conf'
+        dest: '{{ user_config }}/copyq'
+
 - name: run startup helper
   import_tasks: '{{ helper_path }}/startup.yml'
   vars:
