--- a/roles/firefox/tasks/main.yml
+++ b/roles/firefox/tasks/main.yml
@@ -1,6 +1,17 @@
 ---
+- name: run package helper
+  import_tasks: '{{ helper_path }}/package_apt.yml'
+
 - name: add shortcut
   import_tasks: '{{ helper_path }}/shortcut.yml'
 
-- name: run package helper
-  import_tasks: '{{ helper_path }}/package_apt.yml'
+- name: run template helper
+  import_tasks: '{{ helper_path }}/template.yml'
+  vars:
+    template_list:
+      - src: 'profiles.ini'
+        dest: '{{ user_home }}/.mozilla/firefox'
+      - src: 'bookmarks.html'
+        dest: '{{ user_home }}/.mozilla/firefox/custom.user'
+      - src: 'user.js'
+        dest: '{{ user_home }}/.mozilla/firefox/custom.user'
