--- a/roles/flameshot/tasks/main.yml
+++ b/roles/flameshot/tasks/main.yml
@@ -1,4 +1,14 @@
 ---
+- name: run package helper
+  import_tasks: '{{ helper_path }}/package_apt.yml'
+
+- name: run copy helper
+  import_tasks: '{{ helper_path }}/copy.yml'
+  vars:
+    copy_list:
+      - src: 'flameshot.ini'
+        dest: '{{ user_config }}/Dharkael'
+
 - name: disable defautl shortcuts
   import_tasks: '{{ helper_path }}/dconf.yml'
   vars:
@@ -6,6 +16,3 @@
 
 - name: add shortcut
   import_tasks: '{{ helper_path }}/shortcut.yml'
-
-- name: run package helper
-  import_tasks: '{{ helper_path }}/package_apt.yml'
