--- a/roles/synaptic/tasks/main.yml
+++ b/roles/synaptic/tasks/main.yml
@@ -1,3 +1,11 @@
 ---
 - name: run package helper
   import_tasks: '{{ helper_path }}/package_apt.yml'
+
+- name: run copy helper
+  import_tasks: '{{ helper_path }}/copy.yml'
+  vars:
+    copy_list:
+      - src: 'synaptic.conf'
+        dest: '/root/.synaptic'
+        privilege: true
