--- a/roles/thunderbird/tasks/main.yml
+++ b/roles/thunderbird/tasks/main.yml
@@ -1,3 +1,15 @@
 ---
 - name: run package helper
   import_tasks: '{{ helper_path }}/package_apt.yml'
+
+
+- name: run copy helper
+  import_tasks: '{{ helper_path }}/copy.yml'
+  vars:
+    copy_list:
+      - src: 'profiles.ini'
+        dest: '{{ user_home }}/.thunderbird'
+      - src: 'prefs.js'
+        dest: '{{ user_home }}/.thunderbird/custom.user_profile'
+      - src: 'xulstore.json'
+        dest: '{{ user_home }}/.thunderbird/custom.user_profile'
