--- a/service/helper/startup.yml
+++ b/service/helper/startup.yml
@@ -14,6 +14,6 @@
 
 - name: create file and content
   copy:
-    content: "{{ lookup('template', helper_path ~ '/templates/startup.j2') }}"
+    content: "{{ lookup('template', helper_path ~ '/templates/startup') }}"
     dest: '{{ entry_path }}'
   when: entry_path is not file
