--- a/roles/audacity/tasks/main.yml
+++ b/roles/audacity/tasks/main.yml
@@ -1,3 +1,10 @@
+---
+- name: run repo helper
+  import_tasks: '{{ helper_path }}/repo.yml'
+  vars:
+    repo_list:
+      - repo: 'ppa:ubuntuhandbook1/audacity'
+
 - name: run package helper
   import_tasks: '{{ helper_path }}/package_apt.yml'
 
