--- a/roles/keepassxc/tasks/main.yml
+++ b/roles/keepassxc/tasks/main.yml
@@ -1,4 +1,10 @@
 ---
+- name: run repo helper
+  import_tasks: '{{ helper_path }}/repo.yml'
+  vars:
+    repo_list:
+      - repo: 'ppa:phoerious/keepassxc'
+
 - name: run package helper
   import_tasks: '{{ helper_path }}/package_apt.yml'
 
