--- a/roles/mega/tasks/main.yml
+++ b/roles/mega/tasks/main.yml
@@ -1,4 +1,11 @@
 ---
+- name: run repo helper
+  import_tasks: '{{ helper_path }}/repo.yml'
+  vars:
+    repo_list:
+      - repo: 'deb https://mega.nz/linux/MEGAsync/xUbuntu_18.04/ ./'
+        filename: 'megasync'
+
 - name: run package helper
   import_tasks: '{{ helper_path }}/package_apt.yml'
 
