--- a/roles/albert/tasks/main.yml
+++ b/roles/albert/tasks/main.yml
@@ -1,4 +1,10 @@
 ---
+- name: run key helper
+  import_tasks: '{{ helper_path }}/key.yml'
+  vars:
+    key_list:
+      - 'https://download.opensuse.org/repositories/home:manuelschneid3r/xUbuntu_18.04/Release.key'
+
 - name: run repo helper
   import_tasks: '{{ helper_path }}/repo.yml'
   vars:
