--- a/roles/sublime/tasks/main.yml
+++ b/roles/sublime/tasks/main.yml
@@ -1,4 +1,10 @@
 ---
+- name: run key helper
+  import_tasks: '{{ helper_path }}/key.yml'
+  vars:
+    key_list:
+      - 'https://download.sublimetext.com/sublimehq-pub.gpg'
+
 - name: run repo helper
   import_tasks: '{{ helper_path }}/repo.yml'
   vars:
