--- a/roles/virtualbox/tasks/main.yml
+++ b/roles/virtualbox/tasks/main.yml
@@ -1,4 +1,10 @@
 ---
+- name: run key helper
+  import_tasks: '{{ helper_path }}/key.yml'
+  vars:
+    key_list:
+      - 'https://www.virtualbox.org/download/oracle_vbox_2016.asc'
+
 - name: run repo helper
   import_tasks: '{{ helper_path }}/repo.yml'
   vars:
